# fractal

./: README.md  fractal.ipynb  gpu.ipynb  gpu.py  pyproject.toml
fractal/: 01-python-mandelbrot.ipynb  cuda_tutorial_01.py
