[tool.poetry]
name = "fractal"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
jupyter = "^1.0.0"
numba = "^0.54.1"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
